--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lucide-react": "^0.475.0",
     "motion": "^12.9.2",
     "next": "15.1.7",
+    "ogl": "^1.0.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.1",
